--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ header img {
   width: 100px;
 }
 
-.company-info, .team {
+.company-info, .promo-video, .team {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
