--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,13 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #657937;
-  color: #36454F;
+  color: #292c3c;
   margin: 0;
   padding: 0;
 }
 
 header {
-  background-color: #36454F;
+  background-color: #292c3c;
   color: #657937;
   text-align: center;
   padding: 20px;
@@ -35,7 +35,7 @@ header img {
 }
 
 footer {
-  background-color: #36454F;
+  background-color: #292c3c;
   color: #657937;
   text-align: center;
   padding: 10px;
