--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   font-family: Arial, sans-serif;
   background-color: #657937;
   color: #292c3c;
+  text-align: center;
   margin: 0;
   padding: 0;
 }
